--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ZPkO9bCiQ/PRYlzKaWhBpt1SvNB8BSI7V6tL4ebEqcM=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -24,7 +24,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=festriq-app
+DB_DATABASE=festriq-app-testing
 DB_USERNAME=sail
 DB_PASSWORD=password
 
