--- a/.env.testing
+++ b/.env.testing
@@ -4,6 +4,7 @@ APP_KEY=base64:ZPkO9bCiQ/PRYlzKaWhBpt1SvNB8BSI7V6tL4ebEqcM=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
+APP_PORT=80
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
