--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "react-big-calendar": "^1.17.1",
         "react-day-picker": "^8.10.1",
         "react-hook-form": "^7.54.2",
+        "recharts": "^2.15.1",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.24.1"
