--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
         "pestphp/pest": "^3.7",
-        "pestphp/pest-plugin-laravel": "^3.1"
+        "pestphp/pest-plugin-laravel": "^3.1",
+        "rector/rector": "^2.0.7",
+        "peckphp/peck": "^0.1.1"
     },
     "autoload": {
         "psr-4": {
